Update experience and summary.  Added initial resume

--- a/experience.tex
+++ b/experience.tex
@@ -1,18 +1,18 @@
-\subsection{OPUS IVS}
+\subsection{Opus IVS}
 \noindent\textbf{Director of Engineering Reporting to CTO} \\
 Dexter, MI \divider{} September 2023 – Present
 \begin{itemize}
     \resitem{Orchestrated agile transformation initiatives, adopting Scrum and Kanban methodologies, resulting in a 20\% reduction in delivery cycles for features and defects}
     \resitem{Implemented proactive testing strategies, reducing defect rates by 10\%, which lowered costs related to rework and boosted product quality}
     \resitem{Championed cross-functional collaboration between engineering and product management, reducing requirement turnaround times by 10\%, leading to faster decision-making}
-    \resitem{Led a globally distributed engineering team, establishing efficient communication channels to maintain productivity across time zones}
+    \resitem{Led a globally distributed engineering organization of 16 engineers across 4 cross-functional teams, establishing efficient communication channels to maintain productivity across time zones}
     \resitem{Implemented lean software development practices and automation workflows, boosting operational efficiency and reducing overhead}
     \resitem{Drove the adoption of DevOps practices within in-house teams, streamlining development processes and reducing deployment time by 50\%, enhancing the overall quality of cloud and native applications, leveraging AWS and Azure platforms}
     \resitem{Cultivated a high-performance engineering culture, driving professional growth through mentorship and leadership}
     \resitem{Balanced workloads and responsibilities between front-end and back-end teams, fostering seamless integration of user interface and server-side functionalities while maximizing overall team productivity}
 \end{itemize}
 
-\subsection{BALANCE TECHNOLOGY INC}
+\subsection{Balance Technology Inc}
 \noindent\textbf{Director – Engineering \& Operations Reporting to COO} \\
 Whitmore Lake, MI \divider{} August 2021 – September 2023
 \begin{itemize}
@@ -34,7 +34,7 @@ Whitmore Lake, MI \divider{} August 2019 – August 2021
     \resitem{Mentored and developed engineering staff, resolved complex design challenges, and maintained productive partnerships with external vendors and contractors}
 \end{itemize}
 
-\subsection{NEW EAGLE}
+\subsection{New Eagle}
 \noindent\textbf{Sr. Software Engineer / Manager} \\
 Ann Arbor, MI \divider{} February 2017 – August 2019
 \begin{itemize}
@@ -47,6 +47,6 @@ Ann Arbor, MI \divider{} February 2017 – August 2019
     \resitem{Collaborated closely with the marketing team to develop compelling advertising materials and engaging blog posts, strategically driving interest in our products and engineering services}
 \end{itemize}
 
-\subsection{BALANCE TECHNOLOGY INC}
+\subsection{Balance Technology Inc}
 \noindent\textbf{Sr. Software Engineer / Team Lead} \\
 Whitmore Lake, MI \divider{} March 2006 – February 2017
